# api/handler/v1/payment.go
@@ -335,3 +335,49 @@ func (h *handlerV1) PaymentSearch(c *gin.Context) {
 
 	c.JSON(http.StatusOK, response)
 }
+
+// PaymentStudent ...
+// @Router /payment/studentlist/ [get]
+// @Summary PaymentStudent
+// @Description This API for getting list of payments
+// @Tags payment
+// @Accept  json
+// @Produce  json
+// @Param student_id query string false "StudentId"
+// @Param group_id query string false "GroupId"
+// @Success 200 {object} models.Empty
+// @Failure 400 {object} models.StandardErrorModel
+// @Failure 500 {object} models.StandardErrorModel
+func (h *handlerV1) PaymentStudent(c *gin.Context) {
+	queryParams := c.Request.URL.Query()
+
+	params, errStr := utils.ParseQueryParams(queryParams)
+	if errStr != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": errStr[0],
+		})
+		h.log.Error("failed to parse query params json" + errStr[0])
+		return
+	}
+
+	var jspbMarshal protojson.MarshalOptions
+	jspbMarshal.UseProtoNames = true
+
+	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
+	defer cancel()
+
+	response, err := h.serviceManager.FinanceService().PaymentStudent(
+		ctx, &pb.PySt{
+			StudentId: params.StudentId,
+			GroupId:   params.GroupId,
+		})
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("failed to list payments", l.Error(err))
+		return
+	}
+
+	c.JSON(http.StatusOK, response)
+}
